[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/PlateStatic.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.733333, 0.231373, 0.231373, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0745098, 0.262745, 0.0666667, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0.364706, 0.929412, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.231373, 0.160784, 0.0980392, 1 )

[sub_resource type="CylinderShape" id=6]
radius = 0.148354
height = 0.102313

[sub_resource type="BoxShape" id=7]
extents = Vector3( 4.32248, 1, 0.9 )

[node name="PlateStatic" type="StaticBody"]
script = ExtResource( 1 )

[node name="DirtyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MeshClean" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0.0543229, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="MeshRed" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, -0.00261497, 0.0543229, -0.000475526 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshGreen" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0.0543229, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="MeshBlue" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0.0543229, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="MeshDirty" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0.0543229, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0543229, 0 )
shape = SubResource( 6 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.15, 0, 0, 0, 0.05, 0, 0, 0, 0.15, 0, 0.0543229, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 7 )
[connection signal="timeout" from="DirtyTimer" to="." method="_on_DirtyPlate_timeout"]
